# family_boggle

./: CLAUDE.md  Caddyfile  README.md  docker-compose.yml
audio_generator/: celebration_sounds.py  generate_all.py  music.py  requirements.txt  sound_effects.py  synth.py
backend/: Dockerfile  pyproject.toml
backend/family_boggle/: board.py  challenges.py  config.py  dictionary.py  game_engine.py  high_scores.py  main.py  models.py  powerups.py  scoring.py  websocket_manager.py
frontend/: .dockerignore  Dockerfile  index.html  nginx.conf  package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/components/: AudioControls.tsx  Countdown.tsx  GameBoard.tsx  GameSummary.tsx  JoinScreen.tsx  Leaderboard.tsx  Lobby.tsx  MonsterAvatar.tsx  WaitingScreen.tsx
frontend/src/components/summary/: FlyingWord.tsx  PlayerScoreCard.tsx  WordAwardAnimation.tsx
frontend/src/contexts/: AudioContext.tsx  WebSocketContext.tsx
frontend/src/hooks/: useAudio.ts  useWebSocket.ts
frontend/src/stores/: gameStore.ts
