[tool.poetry]
name = "family-boggle-backend"
version = "0.1.0"
description = "Multiplayer Boggle game backend"
authors = ["John <john@example.com>"]
packages = [{include = "family_boggle"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.1"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
websockets = "^12.0"
pydantic = "^2.5.2"
pydantic-settings = "^2.1.0"
structlog = "^23.2.0"
nltk = "^3.8.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-asyncio = "^0.21.1"
pytest-cov = "^4.1.0"
black = "^23.11.0"
ruff = "^0.1.6"
mypy = "^1.7.1"
hypothesis = "^6.91.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py311']

[tool.ruff]
select = ["E", "F", "I", "N", "UP", "ASYNC"]
ignore = []
line-length = 88

[tool.mypy]
strict = true
python_version = "3.11"
ignore_missing_imports = true


